--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "node node_modules/eslint/bin/eslint.js ./src"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,7 @@
   "devDependencies": {
     "editorconfig": "^0.15.3",
     "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
