--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "jest": "^24.9.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-jest": "^24.9.0"
   },
   "dependencies": {
     "mapbox-gl": "^1.6.1"
